// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Latest Command Snapshot > should format startup list consistently 1`] = `
"┌────────────────────┬────────────────────────────────────────┬────────────┬────────────────────┐
│ Name               │ Tagline                                │ Date       │ Categories         │
├────────────────────┼────────────────────────────────────────┼────────────┼────────────────────┤
│ Startup One        │ The first startup                      │ 2026-03-29 │ SaaS, AI           │
├────────────────────┼────────────────────────────────────────┼────────────┼────────────────────┤
│ Startup Two        │ The second startup                     │ 2026-03-28 │ Fintech            │
└────────────────────┴────────────────────────────────────────┴────────────┴────────────────────┘"
`;

exports[`Latest Command Snapshot > should handle empty list 1`] = `
"┌────────────────────┬────────────────────────────────────────┬────────────┬────────────────────┐
│ Name               │ Tagline                                │ Date       │ Categories         │
└────────────────────┴────────────────────────────────────────┴────────────┴────────────────────┘"
`;

exports[`Latest Command Snapshot > should handle minimal data 1`] = `
"┌────────────────────┬────────────────────────────────────────┬────────────┬────────────────────┐
│ Name               │ Tagline                                │ Date       │ Categories         │
├────────────────────┼────────────────────────────────────────┼────────────┼────────────────────┤
│ Minimal Startup    │ -                                      │ -          │ -                  │
└────────────────────┴────────────────────────────────────────┴────────────┴────────────────────┘"
`;
